@@ -35,9 +35,10 @@
 
 #include <stdio.h>
 #include <fcntl.h>
+#include "global.h"
 #include "vp.h"
 
-#define READ	0
+#define VP_READ	0
 
 static char const rcsid[] = "$Id$";
 
@@ -49,7 +50,7 @@ vpopen(char *path, int oflag)
 	int	i;
 
 	if ((returncode = myopen(path, oflag, 0666)) == -1 && path[0] != '/' &&
-	    oflag == READ) {
+	    oflag == VP_READ) {
 		vpinit((char *) 0);
 		for (i = 1; i < vpndirs; i++) {
 			(void) sprintf(buf, "%s/%s", vpdirs[i], path);
